Make code almost PEP 8 compliant

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "4b1e0b8b",
    "metadata": {
     "scrolled": false
@@ -71,7 +71,7 @@
     "\n",
     "import shap\n",
     "\n",
-    "from get_barriers import reverse_reactions, add_reverse_reactions, split_and_tweak, test_with_reverse_reactions"
+    "from get_barriers import add_reverse_reactions, split_and_tweak, test_with_reverse_reactions"
    ]
   },
   {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c6785aa9",
    "metadata": {},
    "outputs": [],
@@ -184,26 +184,29 @@
     "    Hyperparameter tuning function to be optimized via cross-validation.\n",
     "\n",
     "    Arguments:\n",
-    "    \n",
-    "        - space: a dictionary whose keys are hyperparameters to be searched, and\n",
-    "                 whose values are distributions to search over\n",
-    "    \n",
+    "\n",
+    "        - space: a dictionary whose keys are hyperparameters to be searched,\n",
+    "                 and whose values are distributions to search over\n",
+    "\n",
     "    Returns:\n",
     "\n",
     "        - a dictionary with the following keys:\n",
     "\n",
-    "            - 'loss': the loss function to be minimized over the hyperparameter space\n",
+    "            - 'loss': the loss function to be minimized over the hyperparameter\n",
+    "                      space\n",
     "\n",
-    "            - 'loss_variance': optionally an estimate of the variance of this loss function\n",
+    "            - 'loss_variance': optionally an estimate of the variance of this\n",
+    "                               loss function\n",
     "\n",
-    "            - 'status': STATUS_OK indicating the loss was properly computed for a set of hyperparameters\n",
+    "            - 'status': STATUS_OK indicating the loss was properly computed for\n",
+    "                        a set of hyperparameters\n",
     "    \"\"\"\n",
     "\n",
     "    # Define hyperparameters for xgboost.cv, with reference to the space of\n",
     "    # hyperparameters being searched over\n",
     "    param_grid = {\n",
-    "        'max_depth': int(space['max_depth']), \n",
-    "        'gamma': space['gamma'],                                         \n",
+    "        'max_depth': int(space['max_depth']),\n",
+    "        'gamma': space['gamma'],\n",
     "        'reg_alpha': space['reg_alpha'],\n",
     "        'min_child_weight': space['min_child_weight'],\n",
     "        'subsample': space['subsample'],\n",
@@ -213,11 +216,15 @@
     "        'seed': 42,\n",
     "        'nthread': -1\n",
     "    }\n",
-    "    \n",
-    "    # Perform cross-validation for the set of hyperparameters in param_grid\n",
-    "    xgb_cv = xgboost.cv(param_grid, xgb_train, num_boost_round=int(space['num_boost_round']), folds=gkf)\n",
     "\n",
-    "    # Extract the loss and an estimate of the variance of the loss from cross-validation\n",
+    "    # Perform cross-validation for the set of hyperparameters in param_grid\n",
+    "    xgb_cv = xgboost.cv(param_grid,\n",
+    "                        xgb_train,\n",
+    "                        num_boost_round=int(space['num_boost_round']),\n",
+    "                        folds=gkf)\n",
+    "\n",
+    "    # Extract the loss and an estimate of the variance of the loss from\n",
+    "    # cross-validation\n",
     "    rmse_mean = xgb_cv['test-rmse-mean'].iloc[-1]\n",
     "    rmse_var = (xgb_cv['test-rmse-std'].iloc[-1])**2\n",
     "\n",
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "ae2dc9e3",
    "metadata": {},
    "outputs": [
@@ -242,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [1:08:44<00:00, 41.24s/trial, best loss: 1.087544618583285]\n",
+      "100%|██████████| 100/100 [55:46<00:00, 33.46s/trial, best loss: 1.087544618583285]  \n",
       "{'alpha': 5.149827732893656e-05, 'colsample_bytree': 0.7640414077638942, 'gamma': 0.0013879909179442785, 'learning_rate': 0.021428911817465653, 'max_depth': 10.0, 'min_child_weight': 8.312497834953593, 'num_boost_round': 951.0, 'subsample': 0.5909178839362138}\n"
      ]
     }
@@ -253,10 +260,10 @@
     "\n",
     "# Use Hyperopt to optimize the hyperparameters\n",
     "best_params_hyperopt = fmin(\n",
-    "    fn=hyperparameter_tuning_cv,            \n",
-    "    space=space,           \n",
-    "    algo=tpe.suggest,            \n",
-    "    max_evals=100,            \n",
+    "    fn=hyperparameter_tuning_cv,\n",
+    "    space=space,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=100,\n",
     "    trials=trials_cv,\n",
     "    rstate=np.random.default_rng(23),\n",
     "    #timeout=60*30                       # Timeout after 30 minutes, comment out when not testing\n",
@@ -276,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "a9eae2ff",
    "metadata": {},
    "outputs": [],
@@ -312,33 +319,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "3febc033",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_results(y_true, y_pred, min_lim=7, max_lim=29, hue=None, hue_labels=None):\n",
+    "def plot_results(y_true, y_pred, min_lim=7, max_lim=29,\n",
+    "                 hue=None, hue_labels=None):\n",
     "    \"\"\"\n",
     "    Function which plots ML-predicted barriers (y-axis) vs. ground-truth\n",
     "    DFT-computed barriers (x-axis).\n",
     "\n",
     "    Arguments:\n",
-    "    \n",
-    "        - y_true: Pandas series whose entries correspond to the ground-truth DFT-computed\n",
-    "                  free energy barriers for hydrogen atom transfer reactions\n",
-    "        \n",
+    "\n",
+    "        - y_true: Pandas series whose entries correspond to the ground-truth\n",
+    "                  DFT-computed free energy barriers for hydrogen atom transfer\n",
+    "                  reactions\n",
+    "\n",
     "        - y_pred: Pandas series whose entries correspond to the ML-predicted\n",
     "                  free energy barriers for hydrogen atom transfer reactions\n",
     "\n",
-    "        - min_lim: Int or float with the minimum limit for the x-axis and y-axis (in kcal/mol)\n",
-    "        \n",
-    "        - max_lim: Int or float with the maximum limit for the x-axis and y-axis (in kcal/mol)\n",
-    "    \n",
-    "        - hue: An optional Pandas series whose entries contain labels according to which\n",
-    "               points are to be colored\n",
+    "        - min_lim: Int or float with the minimum limit for the x-axis and\n",
+    "                   y-axis (in kcal/mol)\n",
     "\n",
-    "        - hue_labels: An optional list of labels corresponding to the different hues\n",
-    "                      (need to experiment to get this list in the correct order)\n",
+    "        - max_lim: Int or float with the maximum limit for the x-axis and\n",
+    "                   y-axis (in kcal/mol)\n",
+    "\n",
+    "        - hue: An optional Pandas series whose entries contain labels according\n",
+    "               to which points are to be colored\n",
+    "\n",
+    "        - hue_labels: An optional list of labels corresponding to the different\n",
+    "                      hues (need to experiment to get this list in the correct\n",
+    "                      order)\n",
     "\n",
     "    Returns:\n",
     "\n",
@@ -347,7 +359,8 @@
     "\n",
     "    fig, ax = plt.subplots()\n",
     "\n",
-    "    # Scatterplot of ML-computed barriers (y-axis) vs. ground-truth DFT-computed barriers (x-axis)\n",
+    "    # Scatterplot of ML-computed barriers (y-axis) vs.\n",
+    "    # ground-truth DFT-computed barriers (x-axis)\n",
     "    sns.scatterplot(x=y_true, y=y_pred, hue=hue, ax=ax)\n",
     "    ax.set_xlabel('DFT-Computed Barrier (kcal/mol)')\n",
     "    ax.set_ylabel('ML-Computed Barrier (kcal/mol)')\n",
@@ -356,19 +369,22 @@
     "    ax.set_xlim(min_lim, max_lim)\n",
     "    ax.set_ylim(min_lim, max_lim)\n",
     "\n",
-    "    # If hue labels are provided, put them on the legend to identify the meaning of the color of each point\n",
+    "    # If hue labels are provided, put them on the legend to identify the\n",
+    "    # meaning of the color of each point\n",
     "    if hue_labels is not None:\n",
-    "        ax.legend(loc='lower right', labels = ['_nolegend_'] + hue_labels)\n",
+    "        ax.legend(loc='lower right', labels=['_nolegend_'] + hue_labels)\n",
     "    # Otherwise remove the legend\n",
     "    else:\n",
-    "        ax.legend([],[], frameon=False)\n",
+    "        ax.legend([], [], frameon=False)\n",
     "\n",
-    "    # Add a black dashed y = x line; for a good model points should fall near this line\n",
+    "    # Add a black dashed y = x line; for a good model points should fall\n",
+    "    # near this line\n",
     "    x = np.linspace(min_lim, max_lim, 100)\n",
     "    ax.plot(x, x, color='black', ls='--')\n",
     "\n",
-    "    # Add yellow bands extending 1.4 kcal/mol above and below the y = x line; points within\n",
-    "    # this region correspond to reaction rates predicted correctly to within a factor of 10\n",
+    "    # Add yellow bands extending 1.4 kcal/mol above and below the y = x line;\n",
+    "    # points within this region correspond to reaction rates predicted\n",
+    "    # correctly to within a factor of 10\n",
     "    bandwidth = 1.4\n",
     "    ax.fill_between(x, x+bandwidth, x-bandwidth, alpha=0.2, color='yellow')\n",
     "\n",
@@ -378,7 +394,9 @@
     "    RMSE = mean_squared_error(y_true, y_pred, squared=False)\n",
     "\n",
     "    # Display accuracy statistics on graph\n",
-    "    ax.text(0.02, 0.98, 'R$^2$ = %.2f\\nMAE = %.2f kcal/mol\\nRMSE = %.2f kcal/mol' % (R2, MAE, RMSE), verticalalignment='top', transform=ax.transAxes)"
+    "    ax.text(0.02, 0.98,\n",
+    "            'R$^2$ = %.2f\\nMAE = %.2f kcal/mol\\nRMSE = %.2f kcal/mol' % (R2, MAE, RMSE),\n",
+    "            verticalalignment='top', transform=ax.transAxes)"
    ]
   },
   {
@@ -395,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "aa4bb057",
    "metadata": {},
    "outputs": [
@@ -413,7 +431,8 @@
    "source": [
     "# Xin Hong Training Set\n",
     "n_train, y_train_pred = test_with_reverse_reactions(x_train, xgb)\n",
-    "plot_results(y_train[:n_train], y_train_pred[:n_train], hue=rxns_train['cat_file'][:n_train])"
+    "plot_results(y_train[:n_train], y_train_pred[:n_train],\n",
+    "             hue=rxns_train['cat_file'][:n_train])"
    ]
   },
   {
@@ -426,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "4278bd55",
    "metadata": {},
    "outputs": [
@@ -444,7 +463,8 @@
    "source": [
     "# Xin Hong Test Set\n",
     "n_hong, y_hong_pred = test_with_reverse_reactions(x_hong, xgb)\n",
-    "plot_results(y_hong[:n_hong], y_hong_pred[:n_hong], hue=rxns_hong['cat_file'][:n_hong])"
+    "plot_results(y_hong[:n_hong], y_hong_pred[:n_hong],\n",
+    "             hue=rxns_hong['cat_file'][:n_hong])"
    ]
   },
   {
@@ -457,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "ace20fd0",
    "metadata": {},
    "outputs": [
@@ -465,8 +485,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/04/0qn2dmyj63d126b9hb3hzdsc0000gn/T/ipykernel_70436/339057860.py:42: UserWarning: The handle <matplotlib.collections.PathCollection object at 0x7fb19f075970> has a label of '_nolegend_' which cannot be automatically added to the legend.\n",
-      "  ax.legend(loc='lower right', labels = ['_nolegend_'] + hue_labels)\n"
+      "The handle <matplotlib.collections.PathCollection object at 0x7f949276d550> has a label of '_nolegend_' which cannot be automatically added to the legend.\n"
      ]
     },
     {
@@ -487,7 +506,8 @@
     "               r'$\\mathrm{CF}_3\\mathrm{CH}_2\\mathrm{O}\\cdot$',\n",
     "               r'$^t\\mathrm{BuO}\\cdot$']\n",
     "n_houk, y_houk_pred = test_with_reverse_reactions(x_houk, xgb)\n",
-    "plot_results(y_houk[:n_houk], y_houk_pred[:n_houk], max_lim=21, hue=rxns_houk['cat_file'][:n_houk], hue_labels=labels_houk)"
+    "plot_results(y_houk[:n_houk], y_houk_pred[:n_houk], max_lim=21,\n",
+    "             hue=rxns_houk['cat_file'][:n_houk], hue_labels=labels_houk)"
    ]
   },
   {
@@ -514,30 +534,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "ddab8cbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def scan_n_trees(params, low=10, high=250, interval=10):\n",
     "    \"\"\"\n",
-    "    For a given XGBoost model with a defined set of hyperparameters, this function scans\n",
-    "    the number of decision trees in the model (num_boost_round) and plots the loss\n",
-    "    versus the number of decision trees.  The values of num_boost_round to be scanned\n",
-    "    are given by range(low, high + interval, interval).\n",
+    "    For a given XGBoost model with a defined set of hyperparameters, this\n",
+    "    function scans the number of decision trees in the model (num_boost_round)\n",
+    "    and plots the loss versus the number of decision trees.\n",
+    "    The values of num_boost_round to be scanned are given by\n",
+    "    range(low, high + interval, interval).\n",
     "\n",
     "    Arguments:\n",
-    "    \n",
-    "        - params: a dictionary whose keys are hyperparameter names and whose values are\n",
-    "                  hyperparameter values, for use with xgboost.cv\n",
-    "        \n",
-    "        - low: an integer corresponding to the lowest value of num_boost_round to scan\n",
     "\n",
-    "        - high: an integer corresponding to the highest value of num_boost_round to scan\n",
+    "        - params: a dictionary whose keys are hyperparameter names and whose\n",
+    "                  values are hyperparameter values, for use with xgboost.cv\n",
     "\n",
-    "        - interval: an integer corresponding to the difference in the number of decision trees\n",
-    "                    between adjacent points in the scan\n",
-    "    \n",
+    "        - low: an integer corresponding to the lowest value of\n",
+    "               num_boost_round to scan\n",
+    "\n",
+    "        - high: an integer corresponding to the highest value of\n",
+    "                num_boost_round to scan\n",
+    "\n",
+    "        - interval: an integer corresponding to the difference in the number\n",
+    "                    of decision trees between adjacent points in the scan\n",
+    "\n",
     "    Returns:\n",
     "\n",
     "        Nothing\n",
@@ -572,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "39ec364e",
    "metadata": {},
    "outputs": [
@@ -605,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "2325dfff",
    "metadata": {},
    "outputs": [],
@@ -623,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "073cee8c",
    "metadata": {},
    "outputs": [
@@ -641,7 +664,8 @@
    "source": [
     "# Xin Hong Training Set\n",
     "n_train, y_train_pred = test_with_reverse_reactions(x_train, xgb_final)\n",
-    "plot_results(y_train[:n_train], y_train_pred[:n_train], hue=rxns_train['cat_file'][:n_train])"
+    "plot_results(y_train[:n_train], y_train_pred[:n_train],\n",
+    "             hue=rxns_train['cat_file'][:n_train])"
    ]
   },
   {
@@ -656,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "427076d3",
    "metadata": {},
    "outputs": [
@@ -674,7 +698,8 @@
    "source": [
     "# Xin Hong Test Set\n",
     "n_hong, y_hong_pred = test_with_reverse_reactions(x_hong, xgb_final)\n",
-    "plot_results(y_hong[:n_hong], y_hong_pred[:n_hong], hue=rxns_hong['cat_file'][:n_hong])"
+    "plot_results(y_hong[:n_hong], y_hong_pred[:n_hong],\n",
+    "             hue=rxns_hong['cat_file'][:n_hong])"
    ]
   },
   {
@@ -689,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "3dba7f4d",
    "metadata": {},
    "outputs": [
@@ -697,8 +722,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/04/0qn2dmyj63d126b9hb3hzdsc0000gn/T/ipykernel_70436/339057860.py:42: UserWarning: The handle <matplotlib.collections.PathCollection object at 0x7fb19ea4e9a0> has a label of '_nolegend_' which cannot be automatically added to the legend.\n",
-      "  ax.legend(loc='lower right', labels = ['_nolegend_'] + hue_labels)\n"
+      "The handle <matplotlib.collections.PathCollection object at 0x7f9492395700> has a label of '_nolegend_' which cannot be automatically added to the legend.\n"
      ]
     },
     {
@@ -715,7 +739,8 @@
    "source": [
     "# Houk Test Set\n",
     "n_houk, y_houk_pred = test_with_reverse_reactions(x_houk, xgb_final)\n",
-    "plot_results(y_houk[:n_houk], y_houk_pred[:n_houk], max_lim=21, hue=rxns_houk['cat_file'][:n_houk], hue_labels=labels_houk)"
+    "plot_results(y_houk[:n_houk], y_houk_pred[:n_houk], max_lim=21,\n",
+    "             hue=rxns_houk['cat_file'][:n_houk], hue_labels=labels_houk)"
    ]
   },
   {
@@ -750,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "id": "473da846",
    "metadata": {},
    "outputs": [
@@ -770,7 +795,8 @@
     "explainer = shap.TreeExplainer(xgb_final)\n",
     "shap_values = explainer.shap_values(xgb_train)\n",
     "\n",
-    "# Plot the SHAP values for the top 20 input features averaged over each reaction in the training data\n",
+    "# Plot the SHAP values for the top 20 input features averaged over each\n",
+    "# reaction in the training data\n",
     "shap.summary_plot(shap_values, x_train, plot_type=\"bar\")"
    ]
   },
@@ -810,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "1a944469",
    "metadata": {},
    "outputs": [],
